Skill section added

--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -13,6 +13,7 @@
   --behance: #053eef;
   --dribbble: #ea4c89;
   --github: #000000;
+  --skill-outline: #474747;
 
   /* --primary-color: #effbff;
   --secondary-color: #ffffff;
