--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ h5 {
 .port-thumb {
   height: 230px;
   background-clip: content-box;
-  border-radius: 60px;
+  border-radius: 15px;
 }
 
 .thumb-1 {
@@ -216,4 +216,182 @@ h5 {
 
 .github:hover {
   background-color: var(--github);
+}
+
+.session-title {
+  position: relative;
+  height: 100px;
+}
+
+.session-title h2 {
+  width: 100%;
+  position: absolute;
+  font-size: 80px;
+  text-transform: uppercase;
+  font-weight: 900;
+  letter-spacing: 5px;
+  display: flex;
+  justify-content: center;
+}
+
+#outline {
+  z-index: -1;
+  position: absolute;
+  margin-top: -20px;
+  color: var(--primary-color);
+  background: linear-gradient(#ffffff30, #0f0f0f00);
+  background-size: 200% 200%;
+  -webkit-background-clip: text;
+  -webkit-text-stroke: 2px transparent;
+}
+
+.clip-shape {
+  width: 90px;
+  height: 90px;
+  background-color: var(--primary-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: rotate(45deg);
+  position: relative;
+}
+
+.hover-div {
+  width: 90px;
+  height: 90px;
+  background-color: var(--primary-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  z-index: 2;
+}
+
+.shape {
+  width: 80px;
+  height: 80px;
+  background-color: var(--secondary-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--skill-outline);
+  transition: 200ms;
+}
+
+.inner-shape {
+  width: 65px;
+  height: 65px;
+  background-color: var(--secondary-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid var(--skill-outline);
+  border-bottom: 1px solid var(--skill-outline);
+  transition: 200ms;
+}
+
+.skill-icon {
+  transform: rotate(-45deg);
+  font-size: 40px;
+  position: absolute;
+  z-index: 1;
+  color: var(--skill-outline);
+  transition: 200ms;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.photoshop {
+  background-size: cover;
+  background-image: url(../img/photoshop.svg);
+}
+
+.figma {
+  background-size: cover;
+  background-image: url(../img/figma.svg);
+}
+
+.illustrator {
+  background-size: cover;
+  background-image: url(../img/illustrator.svg);
+}
+
+.after-effects {
+  background-size: cover;
+  background-image: url(../img/aftereffects.svg);
+}
+
+.vscode {
+  background-size: cover;
+  background-image: url(../img/vscode.svg);
+}
+
+.bootstrap {
+  background-size: cover;
+  background-image: url(../img/bootstrap.svg);
+}
+
+.skill-name {
+  margin-top: 20px;
+  text-transform: uppercase;
+  font-weight: 600;
+  width: 100%;
+  text-align: center;
+}
+
+.hover-div:hover .shape {
+  background-color: var(--magenta);
+  border: 1px solid var(--primary-text-color);
+  transition: 200ms;
+  box-shadow: 0px 0px 34px 0px #ff3c77;
+}
+
+.hover-div:hover .inner-shape {
+  background-color: var(--magenta);
+  border-top: 1px solid var(--primary-text-color);
+  border-bottom: 1px solid var(--primary-text-color);
+  transform: rotate(90deg);
+  transition: 200ms;
+}
+
+.hover-div:hover .skill-icon {
+  font-size: 45px;
+  z-index: 2;
+  width: 40px;
+  height: 40px;
+  transition: 200ms;
+  color: var(--primary-text-color);
+}
+
+.hover-div:hover .photoshop {
+  background-image: url(../img/photoshop-hover.svg);
+}
+
+.hover-div:hover .figma {
+  background-image: url(../img/figma-hover.svg);
+}
+
+.hover-div:hover .illustrator {
+  background-image: url(../img/illustrator-hover.svg);
+}
+
+.hover-div:hover .after-effects {
+  background-image: url(../img/aftereffects-hover.svg);
+}
+
+.hover-div:hover .vscode {
+  background-image: url(../img/vscode-hover.svg);
+}
+
+.hover-div:hover .bootstrap {
+  background-image: url(../img/bootstrap-hover.svg);
+}
+
+.skill-align {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
