--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -3,6 +3,7 @@
   --secondary-color: #1e1b1e;
   --third-color: #272427;
   --border-color: #3a3a3a;
+  --header-hover: #fe628e;
   --ciano: #10e0b4;
   --orange: #ff9a3d;
   --magenta: #ff3c77;
