--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body {
   padding-top: 20px;
   font-family: "Outfit", sans-serif;
   color: var(--primary-text-color);
+  overflow-x: hidden;
 }
 
 a {
@@ -718,4 +719,31 @@ h5 {
 
 #contact {
   scroll-margin-top: 100px;
+}
+
+.hamburguer {
+  font-size: 30px;
+  padding-right: 30px;
+}
+
+.header.mobile {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    display: none;
+  }
+
+  .header.mobile {
+    display: flex;
+  }
+
+  .title h1 {
+    font-size: 30px;
+  }
+
+  .name {
+    font-size: 17px;
+  }
 }
